--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="bio ds-f-c">
                     <div class="sub-bio fs-20">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis leo dui. Nullam eleifend mi vitae tempus accumsan. Pellentesque finibus eu ex eu bibendum. Duis cursus leo sit amet lorem gravida, sit amet vestibulum nisl sagittis. Vestibulum blandit nunc nulla, a ultricies dolor tempor id. Fusce vestibulum, augue vel condimentum gravida, quam lacus venenatis est, suscipit eleifend magna risus vel enim. Aenean et quam et turpis porta vulputate. Mauris elementum tincidunt aliquet. Proin ante risus, feugiat non varius at, sollicitudin fermentum sapien. Nulla nec lacus eros. Ut maximus libero non nulla maximus, at commodo enim mattis. Aliquam mattis libero eget mauris sodales, non iaculis leo dictum. Sed turpis urna, imperdiet nec fermentum in, vehicula et lectus. Suspendisse ac dui at massa tincidunt molestie ac a purus.</p>
-                        
+
                     </div>
                 </div>
             </div>
@@ -58,6 +58,7 @@
             <div class="skill"></div>
         </div>
         <div class="hobby"></div>
+    <img src="2016-03-30.jpg" style="width: 500px">
     </body>
     <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="jsFile.js"></script>
