update index.html xp, css and js

--- a/index.html
+++ b/index.html
@@ -29,47 +29,64 @@
                 </div>
             </div>
         </div>
+
         <div class="experience ds-f-c">
-            <div class="sub-experience d-ib ta-c" style="    margin-top: 13%;">
-                <div class="d-ib ft-L s-w-250-px s-270-150 krealinks ">
-                    <div>
-
+            <div class="sub-experience d-ib ta-c mrg-top-50-px">
+                <div class="mrg-top-20-px">
+                    <div class="d-ib ft-L s-w-250-px s-270-150 krealinks">
+                        <div class="k-js-sub-block-one sub-block-one company">
+                            <h1>krealinks</h1>
+                            <p class="date">Aujourd'hui - Octobre, 2015</p>
+                            <p class="title ta-c">Devellopper</p>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                        </div>
+                    </div>
+                    <div class="d-ib s-w-250-px s-270-150 webapp">
+                        <div class="k-js-sub-block-two sub-block-two company">
+                            <h1>krealinks</h1>
+                            <p class="date">Aujourd'hui - Octobre, 2015</p>
+                            <p class="title">Devellopper</p>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                        </div>
+                    </div>
+                    <div class="d-ib ft-R s-w-250-px s-270-150 ageval">
+                        <div class="k-js-sub-block-three sub-block-three company">
+                            <h1>krealinks</h1>
+                            <p class="date">Aujourd'hui - Octobre, 2015</p>
+                            <p class="title">Devellopper</p>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="d-ib s-w-250-px s-270-150 webapp">
-                    <div>
 
+
+                <div class="mrg-top-20-px">
+                    <div class="d-ib ft-L s-w-250-px s-270-150 sncf">
+                        <div class="k-js-sub-block-four sub-block-four company">
+                            <h1>krealinks</h1>
+                            <p class="date">Aujourd'hui - Octobre, 2015</p>
+                            <p class="title">Devellopper</p>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="d-ib ft-R s-w-250-px s-270-150  ageval">
-                    <div>
 
+                    <div class="d-ib s-w-250-px s-270-150 jrled">
+                        <div class="k-js-sub-block-five sub-block-five company">
+                            <h1>krealinks</h1>
+                            <p class="date">Aujourd'hui - Octobre, 2015</p>
+                            <p class="title">Devellopper</p>
+                            <p class="description"></p>
+                        </div>
                     </div>
-                </div>
-                <div class="d-ib ft-L s-w-250-px s-270-150 sncf ">
-                    <div>
 
+                    <div class="d-ib ft-R s-w-250-px s-270-150 macdonald">
+                        <div class="k-js-sub-block-six sub-block-six company">
+                            <h1>krealinks</h1>
+                            <p class="date">Aujourd'hui - Octobre, 2015</p>
+                            <p class="title">Devellopper</p>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="d-ib s-w-250-px s-270-150 jrled">
-                    <div>
-
-                    </div>
-                </div>
-                <div class="d-ib ft-R s-w-250-px s-270-150 macdonald">
-                    <div>
-
-                    </div>
-                </div>
-                <!--<div class="d-ib ft-L s-w-250-px s-270-150 jrled ">-->
-                    <!--<div>-->
-
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="d-ib s-w-250-px s-270-150 macdonald">-->
-                    <!--<div>-->
-
-                    <!--</div>-->
                 </div>
             </div>
         </div>
