update jauge and exp

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>CV Jonathan Dodard</title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet">
+        <link rel='stylesheet' type='text/css' href='jauge-circulaire.css' />
     </head>
     <body>
         <div class="information">
@@ -31,57 +32,53 @@
         </div>
 
         <div class="experience ds-f-c">
-            <div class="sub-experience d-ib ta-c mrg-top-50-px">
-                <div class="mrg-top-20-px">
-                    <div class="d-ib ft-L s-w-250-px s-270-150 krealinks">
-                        <div class="k-js-sub-block-one sub-block-one company">
+            <div class="sub-experience d-ib" style="position: relative">
+                <div>
+                    <div class="d-ib s-w-250-px s-270-150 krealinks bg-c-grey-s-100-100 ft-L k-js-sub-block-one">
+                        <div class=" sub-block company">
                             <h1>krealinks</h1>
                             <p class="date">Aujourd'hui - Octobre, 2015</p>
                             <p class="title ta-c">Devellopper</p>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                         </div>
                     </div>
-                    <div class="d-ib s-w-250-px s-270-150 webapp">
-                        <div class="k-js-sub-block-two sub-block-two company">
-                            <h1>krealinks</h1>
+                    <div class="d-ib s-w-250-px s-270-150 webapp bg-c-grey-s-100-100 block-company-centre k-js-sub-block-two">
+                        <div class=" sub-block company">
+                            <h1>WebApp</h1>
                             <p class="date">Aujourd'hui - Octobre, 2015</p>
                             <p class="title">Devellopper</p>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                         </div>
                     </div>
-                    <div class="d-ib ft-R s-w-250-px s-270-150 ageval">
-                        <div class="k-js-sub-block-three sub-block-three company">
-                            <h1>krealinks</h1>
+                    <div class="d-ib s-w-250-px s-270-150 ageval bg-c-grey-s-100-100 ft-R ">
+                        <div class="k-js-sub-block-three sub-block company">
+                            <h1>Ageval</h1>
                             <p class="date">Aujourd'hui - Octobre, 2015</p>
                             <p class="title">Devellopper</p>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                         </div>
                     </div>
                 </div>
-
-
-                <div class="mrg-top-20-px">
-                    <div class="d-ib ft-L s-w-250-px s-270-150 sncf">
-                        <div class="k-js-sub-block-four sub-block-four company">
-                            <h1>krealinks</h1>
+                <div>
+                    <div class="d-ib s-w-250-px s-270-150 sncf bg-c-grey-s-100-100 ft-L ">
+                        <div class="k-js-sub-block-four sub-block company">
+                            <h1>Sncf</h1>
+                            <p class="date">Aujourd'hui - Octobre, 2015</p>
+                            <p class="title ta-c">Devellopper</p>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                        </div>
+                    </div>
+                    <div class="d-ib s-w-250-px s-270-150 jrled bg-c-grey-s-100-100 block-company-centre">
+                        <div class="k-js-sub-block-five sub-block company">
+                            <h1>Jrled</h1>
                             <p class="date">Aujourd'hui - Octobre, 2015</p>
                             <p class="title">Devellopper</p>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                         </div>
                     </div>
-
-                    <div class="d-ib s-w-250-px s-270-150 jrled">
-                        <div class="k-js-sub-block-five sub-block-five company">
-                            <h1>krealinks</h1>
-                            <p class="date">Aujourd'hui - Octobre, 2015</p>
-                            <p class="title">Devellopper</p>
-                            <p class="description"></p>
-                        </div>
-                    </div>
-
-                    <div class="d-ib ft-R s-w-250-px s-270-150 macdonald">
-                        <div class="k-js-sub-block-six sub-block-six company">
-                            <h1>krealinks</h1>
+                    <div class="d-ib s-w-250-px s-270-150 macdonald bg-c-grey-s-100-100 ft-R ">
+                        <div class="k-js-sub-block-six sub-block company">
+                            <h1>macdonald</h1>
                             <p class="date">Aujourd'hui - Octobre, 2015</p>
                             <p class="title">Devellopper</p>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
@@ -90,12 +87,43 @@
                 </div>
             </div>
         </div>
-        <div class="">
-            <div class="diploma"></div>
-            <div class="skill"></div>
+        <div class="skill">
+            <div class="sub-skill d-ib ta-c mrg-top-50-px">
+                <div class="mrg-top-20-px">
+                    <div class="progress">
+                        <canvas id="subBar1" width="110" height="110"></canvas>
+                        <img class="img-logo" src="img/HTML5_Logo_512.png">
+                        <canvas id="bar1" width="110" height="110"></canvas>
+                    </div>
+                    <div class="progress">
+                        <canvas id="subBar2" width="110" height="110"></canvas>
+                        <img class="img-logo" src="img/symfony_logo.png">
+                        <canvas id="bar2" width="110" height="110"></canvas>
+                    </div>
+                    <div class="progress">
+                        <canvas id="subBar3" width="110" height="110"></canvas>
+                        <img class="img-logo" src="img/PHP-logo.png">
+                        <canvas id="bar3" width="110" height="110"></canvas>
+                    </div>
+                    <div class="progress">
+                        <canvas id="subBar4" width="110" height="110"></canvas>
+                        <img class="img-logo" src="img/logo_javascript.png">
+                        <canvas id="bar4" width="110" height="110"></canvas>
+                    </div>
+                    <div class="progress">
+                        <canvas id="subBar5" width="110" height="110"></canvas>
+                        <img class="img-logo" src="img/l12866-java-eps-logo-99090.png">
+                        <canvas id="bar5" width="110" height="110"></canvas>
+                    </div>
+
+                </div>
+            </div>
         </div>
+        <div class="diploma"></div>
         <div class="hobby"></div>
     </body>
     <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="stylesheet/jauge.js"></script>
     <script type="text/javascript" src="jsFile.js"></script>
+
 </html>
