update animation (finish)^^

--- a/index.html
+++ b/index.html
@@ -33,56 +33,53 @@
 
         <div class="experience ds-f-c">
             <div class="sub-experience d-ib" style="position: relative">
-                <div>
-                    <div class="d-ib s-w-250-px s-270-150 krealinks bg-c-grey-s-100-100 ft-L k-js-sub-block-one">
-                        <div class=" sub-block company">
-                            <h1>krealinks</h1>
-                            <p class="date">Aujourd'hui - Octobre, 2015</p>
-                            <p class="title ta-c">Devellopper</p>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
-                        </div>
-                    </div>
-                    <div class="d-ib s-w-250-px s-270-150 webapp bg-c-grey-s-100-100 block-company-centre k-js-sub-block-two">
-                        <div class=" sub-block company">
-                            <h1>WebApp</h1>
-                            <p class="date">Aujourd'hui - Octobre, 2015</p>
-                            <p class="title">Devellopper</p>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
-                        </div>
-                    </div>
-                    <div class="d-ib s-w-250-px s-270-150 ageval bg-c-grey-s-100-100 ft-R ">
-                        <div class="k-js-sub-block-three sub-block company">
-                            <h1>Ageval</h1>
-                            <p class="date">Aujourd'hui - Octobre, 2015</p>
-                            <p class="title">Devellopper</p>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
-                        </div>
+                <div class="d-ib s-w-250-px s-270-150 krealinks bg-c-grey-s-100-100 k-js-sub-block-one">
+                    <div class=" sub-block company">
+                        <h1>krealinks</h1>
+                        <p class="date">Aujourd'hui - Octobre, 2015</p>
+                        <p class="title ta-c">Devellopper</p>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                     </div>
                 </div>
-                <div>
-                    <div class="d-ib s-w-250-px s-270-150 sncf bg-c-grey-s-100-100 ft-L ">
-                        <div class="k-js-sub-block-four sub-block company">
-                            <h1>Sncf</h1>
-                            <p class="date">Aujourd'hui - Octobre, 2015</p>
-                            <p class="title ta-c">Devellopper</p>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
-                        </div>
+                <div class="d-ib s-w-250-px s-270-150 webapp bg-c-grey-s-100-100 block-company-centre k-js-sub-block-two">
+                    <div class=" sub-block company">
+                        <h1>WebApp</h1>
+                        <p class="date">Aujourd'hui - Octobre, 2015</p>
+                        <p class="title">Devellopper</p>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                     </div>
-                    <div class="d-ib s-w-250-px s-270-150 jrled bg-c-grey-s-100-100 block-company-centre">
-                        <div class="k-js-sub-block-five sub-block company">
-                            <h1>Jrled</h1>
-                            <p class="date">Aujourd'hui - Octobre, 2015</p>
-                            <p class="title">Devellopper</p>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
-                        </div>
+                </div>
+                <div class="d-ib s-w-250-px s-270-150 ageval bg-c-grey-s-100-100 k-js-sub-block-three">
+                    <div class=" sub-block company">
+                        <h1>Ageval</h1>
+                        <p class="date">Aujourd'hui - Octobre, 2015</p>
+                        <p class="title">Devellopper</p>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                     </div>
-                    <div class="d-ib s-w-250-px s-270-150 macdonald bg-c-grey-s-100-100 ft-R ">
-                        <div class="k-js-sub-block-six sub-block company">
-                            <h1>macdonald</h1>
-                            <p class="date">Aujourd'hui - Octobre, 2015</p>
-                            <p class="title">Devellopper</p>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
-                        </div>
+                </div>
+
+                <div class="d-ib s-w-250-px s-270-150 sncf bg-c-grey-s-100-100  mrg-top-8-px k-js-sub-block-four">
+                    <div class="sub-block company">
+                        <h1>Sncf</h1>
+                        <p class="date">Aujourd'hui - Octobre, 2015</p>
+                        <p class="title ta-c">Devellopper</p>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                    </div>
+                </div>
+                <div class="d-ib s-w-250-px s-270-150 jrled bg-c-grey-s-100-100 block-company-centre mrg-top-8-px k-js-sub-block-five">
+                    <div class="sub-block company">
+                        <h1>Jrled</h1>
+                        <p class="date">Aujourd'hui - Octobre, 2015</p>
+                        <p class="title">Devellopper</p>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
+                    </div>
+                </div>
+                <div class="d-ib s-w-250-px s-270-150 macdonald bg-c-grey-s-100-100 mrg-top-8-px k-js-sub-block-six">
+                    <div class="sub-block company">
+                        <h1>macdonald</h1>
+                        <p class="date">Aujourd'hui - Octobre, 2015</p>
+                        <p class="title">Devellopper</p>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus ut ligula sit amet vestibulum. Cras at gravida ipsum, et luctus nisl. Aenean fringilla urna est, in egestas ipsum molestie a. Proin faucibus lacus imperdiet, accumsan metus quis, mollis nibh. Maecenas sit amet ex quis enim imperdiet blandit. Pellentesque viverra.</p>
                     </div>
                 </div>
             </div>
