add new page diploma html, css and js

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                 </div>
             </div>
         </div>
-
         <div class="experience ds-f-c">
-            <div class="sub-experience d-ib" style="position: relative">
+            <div class="sub-experience d-ib" >
                 <div class="d-ib s-w-250-px s-270-150 krealinks bg-c-grey-s-100-100 k-js-sub-block-one">
                     <div class=" sub-block company">
                         <h1>krealinks</h1>
@@ -84,43 +83,68 @@
                 </div>
             </div>
         </div>
-        <div class="skill">
-            <div class="sub-skill d-ib ta-c mrg-top-50-px">
-                <div class="mrg-top-20-px">
-                    <div class="progress">
-                        <canvas id="subBar1" width="110" height="110"></canvas>
-                        <img class="img-logo" src="img/HTML5_Logo_512.png">
-                        <canvas id="bar1" width="110" height="110"></canvas>
+        <div class="skill ds-f-c">
+            <div class="sub-skill d-ib">
+                <div class="diploma d-ib">
+                    <div class="diplomaOne">
+                        <img src="img/logo-imie.png">
+                        <h1 class="d-ib">Bac +4 niveau 2</h1>
+                        <p class="d-ib ">Concepteur developpeur</p>
+                        <p class="d-ib date">En cours</p>
                     </div>
-                    <div class="progress">
-                        <canvas id="subBar2" width="110" height="110"></canvas>
-                        <img class="img-logo" src="img/symfony_logo.png">
-                        <canvas id="bar2" width="110" height="110"></canvas>
+                    <div class="diplomaTwo hidden">
+                        <img src="img/logo-imie.png">
+                        <h1 class="d-ib">Bac +4 niveau 2</h1>
+                        <p class="d-ib ">Concepteur developpeur</p>
+                        <p class="d-ib date">En cours</p>
                     </div>
-                    <div class="progress">
-                        <canvas id="subBar3" width="110" height="110"></canvas>
-                        <img class="img-logo" src="img/PHP-logo.png">
-                        <canvas id="bar3" width="110" height="110"></canvas>
+                    <div class="diplomaThree hidden">
+                        <img src="img/logo-imie.png">
+                        <h1 class="d-ib">Bac +4 niveau 2</h1>
+                        <p class="d-ib ">Concepteur developpeur</p>
+                        <p class="d-ib date">En cours</p>
                     </div>
-                    <div class="progress">
-                        <canvas id="subBar4" width="110" height="110"></canvas>
-                        <img class="img-logo" src="img/logo_javascript.png">
-                        <canvas id="bar4" width="110" height="110"></canvas>
+                    <div class="arrow d-ib">
+                        <img class="arrowImg" src="img/fleche-bas.png">
                     </div>
-                    <div class="progress">
-                        <canvas id="subBar5" width="110" height="110"></canvas>
-                        <img class="img-logo" src="img/l12866-java-eps-logo-99090.png">
-                        <canvas id="bar5" width="110" height="110"></canvas>
-                    </div>
+                </div>
 
+                <div class="skillDev d-ib">
+                    <div class="mrg-top-20-px">
+                        <div class="progress">
+                            <canvas id="subBar1" width="110" height="110"></canvas>
+                            <img class="img-logo" src="img/HTML5_Logo_512.png">
+                            <canvas id="bar1" width="110" height="110"></canvas>
+                        </div>
+                        <div class="progress">
+                            <canvas id="subBar2" width="110" height="110"></canvas>
+                            <img class="img-logo" src="img/symfony_logo.png">
+                            <canvas id="bar2" width="110" height="110"></canvas>
+                        </div>
+                        <div class="progress">
+                            <canvas id="subBar3" width="110" height="110"></canvas>
+                            <img class="img-logo" src="img/PHP-logo.png">
+                            <canvas id="bar3" width="110" height="110"></canvas>
+                        </div>
+                        <div class="progress">
+                            <canvas id="subBar4" width="110" height="110"></canvas>
+                            <img class="img-logo" src="img/logo_javascript.png">
+                            <canvas id="bar4" width="110" height="110"></canvas>
+                        </div>
+                        <div class="progress">
+                            <canvas id="subBar5" width="110" height="110"></canvas>
+                            <img class="img-logo" src="img/l12866-java-eps-logo-99090.png">
+                            <canvas id="bar5" width="110" height="110"></canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="diploma"></div>
-        <div class="hobby"></div>
+    <div class="hobby"></div>
     </body>
-    <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="stylesheet/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="stylesheet/jauge.js"></script>
+    <script type="text/javascript" src="stylesheet/jquery.rotate.js"></script>
     <script type="text/javascript" src="jsFile.js"></script>
 
 </html>
